force-app/main/default/objects/Custom_Event__c/Custom_Event__c.object-meta.xml
<CustomObject>
    <label>Custom Event</label>
    <nameField>
        <label>Custom Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>