force-app/main/default/objects/Custom_Event__c/fields/Event_End__c.field-meta.xml
<CustomField>
    <fullName>Event_End__c</fullName>
    <description>The ending date and time of the event.</description>
    <label>Event End</label>
    <type>DateTime</type>
</CustomField>