force-app/main/default/objects/Custom_Event__c/fields/Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Event_Start__c</fullName>
    <description>The initial date and time of the event.</description>
    <label>Event Start</label>
    <type>DateTime</type>
</CustomField>